Made operators sortable with jquery-ui. Fixed truncate for logic table.

--- a/logic-tree/static/css/app.css
+++ b/logic-tree/static/css/app.css
@@ -1,11 +1,23 @@
-.user-table {
+.main-table {
     width: 100%;
     height: 600px;
 }
 
-.user-table td {
+.main-table td {
     border: 1px solid black;
     width: 50%;
     padding: 10px;
     vertical-align: top;
+}
+
+#sortable {
+    margin-top: 20px;
+    list-style: none;
+}
+
+#sortable li {
+    margin: 0 5px;
+    float: left;
+    color: black;
+    padding: 0 5px;
 }
